--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,9 +12,12 @@ chrono = { version = "0.4", features = ["serde"] }
 dotenvy = "0.15"
 reqwest = { version = "0.11", features = ["json"] }
 serde = { version = "1", features = ["derive"] }
+serde_with = "3"
 sqlx = { version = "0.6", features = ["runtime-tokio-native-tls", "postgres", "macros", "migrate", "chrono"] }
+thiserror = "1"
 tokio = { version = "1", features = ["full"] }
 tower = "0.4"
 tower-http = { version = "0.4", features = ["trace"] }
 tracing = "0.1"
 tracing-subscriber = "0.3"
+validator = { version = "0.16", features = ["derive"] }
