--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ argh = "0.1"
 axum = "0.6"
 chrono = { version = "0.4", features = ["serde"] }
 dotenvy = "0.15"
+feed-rs = "1.3"
 reqwest = { version = "0.11", features = ["json"] }
 serde = { version = "1", features = ["derive"] }
 serde_with = "3"
@@ -31,5 +32,5 @@ tokio = { version = "1", features = ["full"] }
 tower = "0.4"
 tower-http = { version = "0.4", features = ["trace"] }
 tracing = "0.1"
-tracing-subscriber = "0.3"
+tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 validator = { version = "0.16", features = ["derive"] }
