Rename to crawlnicle

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
-name = "crawlect"
+name = "crawlnicle"
 version = "0.1.0"
 edition = "2021"
-default-run = "crawlect"
+default-run = "crawlnicle"
 
 [lib]
 name = "lib"
