--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ axum = "0.6"
 chrono = { version = "0.4", features = ["serde"] }
 dotenvy = "0.15"
 feed-rs = "1.3"
+maud = { version = "0.25", features = ["axum"] }
 reqwest = { version = "0.11", features = ["json"] }
 serde = { version = "1", features = ["derive"] }
 serde_with = "3"
