--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ chrono = { version = "0.4", features = ["serde"] }
 dotenvy = "0.15"
 feed-rs = "1.3"
 maud = { version = "0.25", features = ["axum"] }
+notify = "6"
 reqwest = { version = "0.11", features = ["json"] }
 serde = { version = "1", features = ["derive"] }
 serde_with = "3"
@@ -31,6 +32,7 @@ sqlx = { version = "0.6", features = [
 thiserror = "1"
 tokio = { version = "1", features = ["full"] }
 tower = "0.4"
+tower-livereload = "0.7"
 tower-http = { version = "0.4", features = ["trace"] }
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
