--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ dotenvy = "0.15"
 feed-rs = "1.3"
 maud = { version = "0.25", features = ["axum"] }
 notify = "6"
+once_cell = "1.17"
 reqwest = { version = "0.11", features = ["json"] }
 serde = { version = "1", features = ["derive"] }
 serde_with = "3"
@@ -35,5 +36,6 @@ tower = "0.4"
 tower-livereload = "0.7"
 tower-http = { version = "0.4", features = ["trace"] }
 tracing = "0.1"
+tracing-appender = "0.2"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 validator = { version = "0.16", features = ["derive"] }
