--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ path = "src/lib.rs"
 anyhow = "1"
 argh = "0.1"
 axum = "0.6"
+bytes = "1.4"
 chrono = { version = "0.4", features = ["serde"] }
 dotenvy = "0.15"
 feed-rs = "1.3"
@@ -32,6 +33,7 @@ sqlx = { version = "0.6", features = [
 ] }
 thiserror = "1"
 tokio = { version = "1", features = ["full"] }
+tokio-stream = { version = "0.1", features = ["sync"] }
 tower = "0.4"
 tower-livereload = "0.7"
 tower-http = { version = "0.4", features = ["trace"] }
