--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,8 +37,8 @@ thiserror = "1"
 tokio = { version = "1", features = ["full"] }
 tokio-stream = { version = "0.1", features = ["sync"] }
 tower = "0.4"
-tower-livereload = "0.7"
-tower-http = { version = "0.4", features = ["trace"] }
+tower-livereload = "0.8"
+tower-http = { version = "0.4", features = ["trace", "fs"] }
 tracing = "0.1"
 tracing-appender = "0.2"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
