--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,4 +42,5 @@ tower-http = { version = "0.4", features = ["trace", "fs"] }
 tracing = "0.1"
 tracing-appender = "0.2"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
+url = "2.4"
 validator = { version = "0.16", features = ["derive"] }
