--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,6 +32,7 @@ sqlx = { version = "0.6", features = [
   "macros",
   "migrate",
   "chrono",
+  "uuid",
 ] }
 thiserror = "1"
 tokio = { version = "1", features = ["full"] }
@@ -39,8 +40,9 @@ tokio-stream = { version = "0.1", features = ["sync"] }
 tower = "0.4"
 tower-livereload = "0.8"
 tower-http = { version = "0.4", features = ["trace", "fs"] }
-tracing = "0.1"
+tracing = { version = "0.1", features = ["valuable"] }
 tracing-appender = "0.2"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
+uuid = { version = "1.3", features = ["serde"] }
 url = "2.4"
 validator = { version = "0.16", features = ["derive"] }
