--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,7 +3,7 @@
     "@hotwired/stimulus": "^3.2.1"
   },
   "name": "crawlnicle-frontend",
-  "module": "hello_controller.ts",
+  "module": "js/index.ts",
   "type": "module",
   "devDependencies": {
     "bun-types": "^0.6.0"
