--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,7 @@ feed-rs = "1.3"
 maud = { version = "0.25", features = ["axum"] }
 notify = "6"
 once_cell = "1.17"
+readability = "0.2"
 reqwest = { version = "0.11", features = ["json"] }
 serde = { version = "1", features = ["derive"] }
 serde_with = "3"
