--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,14 +1,11 @@
 {
-  "dependencies": {
-    "@hotwired/stimulus": "^3.2.1"
-  },
   "name": "crawlnicle-frontend",
   "module": "js/index.ts",
-  "type": "module",
   "devDependencies": {
     "bun-types": "^0.6.0"
   },
   "peerDependencies": {
     "typescript": "^5.0.0"
-  }
+  },
+  "type": "module"
 }
