--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,5 +18,8 @@
   "peerDependencies": {
     "typescript": "^5.0.0"
   },
-  "type": "module"
+  "type": "module",
+  "dependencies": {
+    "htmx.org": "^1.9.5"
+  }
 }
