--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,7 @@ path = "src/lib.rs"
 [dependencies]
 ansi-to-html = "0.1"
 anyhow = "1"
-axum = { version = "0.6", features = ["form", "multipart"] }
+axum = { version = "0.6", features = ["form", "headers", "multipart"] }
 bytes = "1.4"
 chrono = { version = "0.4", features = ["serde"] }
 clap = { version = "4.3", features = ["derive", "env"] }
@@ -50,3 +50,4 @@ uuid = { version = "1.3", features = ["serde"] }
 url = "2.4"
 validator = { version = "0.16", features = ["derive"] }
 ammonia = "3.3.0"
+http = "0.2.9"
