--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,19 +12,25 @@ path = "src/lib.rs"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+ammonia = "3.3.0"
 ansi-to-html = "0.1"
 anyhow = "1"
+argon2 = "0.5"
 axum = { version = "0.6", features = ["form", "headers", "multipart"] }
+# waiting for new axum-login release which will support sqlx v. 0.7+
+axum-login = { git = "https://github.com/maxcountryman/axum-login", branch = "main", features = ["postgres"] }
 bytes = "1.4"
 chrono = { version = "0.4", features = ["serde"] }
-clap = { version = "4.3", features = ["derive", "env"] }
+clap = { version = "4.4", features = ["derive", "env"] }
 dotenvy = "0.15"
 feed-rs = "1.3"
 futures = "0.3"
+http = "0.2.9"
 maud = { version = "0.25", features = ["axum"] }
 notify = "6"
-once_cell = "1.17"
+once_cell = "1.18"
 opml = "1.1"
+rand = { version = "0.8.5", features = ["min_const_gen"] }
 readability = "0.2"
 reqwest = { version = "0.11", features = ["json"] }
 serde = { version = "1", features = ["derive"] }
@@ -46,8 +52,6 @@ tower-http = { version = "0.4", features = ["trace", "fs"] }
 tracing = { version = "0.1", features = ["valuable", "attributes"] }
 tracing-appender = "0.2"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
-uuid = { version = "1.3", features = ["serde"] }
+uuid = { version = "1.4", features = ["serde"] }
 url = "2.4"
 validator = { version = "0.16", features = ["derive"] }
-ammonia = "3.3.0"
-http = "0.2.9"
