--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,7 @@ feed-rs = "1.3"
 futures = "0.3"
 headers = "0.3"
 http = "0.2.9"
+lettre = { version = "0.10", features = ["builder"] }
 maud = { version = "0.25", features = ["axum"] }
 notify = "6"
 once_cell = "1.18"
