--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ anyhow = "1"
 argon2 = "0.5"
 async-redis-session = "0.2"
 axum = { version = "0.6", features = ["form", "headers", "multipart", "query"] }
+axum-client-ip = "0.4"
 # waiting for new axum-login release which will support sqlx v. 0.7+
 axum-login = { git = "https://github.com/maxcountryman/axum-login", branch = "main", features = ["postgres"] }
 bytes = "1.4"
@@ -28,6 +29,7 @@ feed-rs = "1.3"
 futures = "0.3"
 headers = "0.3"
 http = "0.2.9"
+ipnetwork = "0.20"
 lettre = { version = "0.10", features = ["builder"] }
 maud = { version = "0.25", features = ["axum"] }
 notify = "6"
@@ -45,6 +47,7 @@ sqlx = { version = "0.7", features = [
   "migrate",
   "chrono",
   "uuid",
+  "ipnetwork",
 ] }
 thiserror = "1"
 tokio = { version = "1", features = ["full"] }
