--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,7 +20,9 @@ async-fred-session = "0.1"
 axum = { version = "0.6", features = ["form", "headers", "multipart", "query"] }
 axum-client-ip = "0.4"
 # waiting for new axum-login release which will support sqlx v. 0.7+
-axum-login = { git = "https://github.com/maxcountryman/axum-login", branch = "main", features = ["postgres"] }
+axum-login = { git = "https://github.com/maxcountryman/axum-login", branch = "main", features = [
+  "postgres",
+] }
 bytes = "1.4"
 chrono = { version = "0.4", features = ["serde"] }
 clap = { version = "4.4", features = ["derive", "env"] }
