--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,14 +14,27 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    - run: rustup toolchain install stable --profile minimal
-
-    - uses: Swatinem/rust-cache@v2
 
     - name: Cache Cargo binaries
       uses: actions/cache@v3
       with:
         path: ~/.cargo/bin
+
+    - uses: extractions/setup-just@v1
+
+    - uses: oven-sh/setup-bun@v1
+      with:
+        bun-version: latest
+
+    - name: Install frontend
+      run: bun install --frozen-lockfile --cwd frontend
+
+    - name: Build frontend
+      run: just build-frontend
+
+    - run: rustup toolchain install stable --profile minimal
+
+    - uses: Swatinem/rust-cache@v2
 
     - name: Install sqlx-cli
       run: cargo install sqlx-cli --no-default-features --features native-tls,postgres
@@ -29,7 +42,7 @@ jobs:
     - name: Run tests
       run: cargo test --verbose
 
-    - name: Build
+    - name: Build backend
       run: cargo build --release --verbose
 
     - name: Install SSH Key
@@ -41,5 +54,8 @@ jobs:
     - name: Adding Known Hosts
       run: ssh-keyscan -H ${{ secrets.SSH_HOST }} >> ~/.ssh/known_hosts
 
-    - name: Deploy with rsync
+    - name: Deploy frontend with rsync
+      run: rsync -avz ./static/ ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}:/home/crawlnicle/crawlnicle/static/
+
+    - name: Deploy backend with rsync
       run: rsync -avz ./target/ ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}:/home/crawlnicle/crawlnicle/target/
