--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,6 +19,7 @@ jobs:
       uses: actions/cache@v3
       with:
         path: ~/.cargo/bin
+        key: ${{ runner.os }}-cargo-bin
 
     - uses: extractions/setup-just@v1
 
