--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -41,10 +41,10 @@ jobs:
       run: cargo install sqlx-cli --no-default-features --features native-tls,postgres
 
     - name: Run tests
-      run: cargo test --verbose
+      run: cargo test
 
     - name: Build backend
-      run: cargo build --release --verbose
+      run: cargo build --release
 
     - name: Install SSH Key
       uses: shimataro/ssh-key-action@v2
