--- a/Cargo.toml
+++ b/Cargo.toml
@@ -44,7 +44,7 @@ reqwest = { version = "0.11", features = ["json"] }
 serde = { version = "1", features = ["derive"] }
 serde_with = "3"
 sqlx = { version = "0.7", features = [
-  "runtime-tokio-native-tls",
+  "runtime-tokio",
   "postgres",
   "macros",
   "migrate",
