--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,14 +12,15 @@ path = "src/lib.rs"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-ammonia = "3.3.0"
+ammonia = "4"
 ansi-to-html = "0.2"
 anyhow = "1"
 async-trait = "0.1"
 axum = { version = "0.7", features = ["form", "multipart", "query"] }
-axum-client-ip = "0.5"
+axum-client-ip = "0.6"
 axum-extra = { version = "0.9", features = ["typed-header"] }
-axum-login = "0.10"
+axum-login = "0.15"
+base64 = "0.22"
 bytes = "1.4"
 # TODO: replace chrono with time
 chrono = { version = "0.4", features = ["serde"] }
@@ -39,8 +40,8 @@ notify = "6"
 once_cell = "1.18"
 opml = "1.1"
 password-auth = "1.0"
-readability = "0.2"
-reqwest = { version = "0.11", features = ["json"] }
+readability = "0.3"
+reqwest = { version = "0.12", features = ["json"] }
 serde = { version = "1", features = ["derive"] }
 serde_with = "3"
 sqlx = { version = "0.7", features = [
@@ -59,13 +60,14 @@ tokio-stream = { version = "0.1", features = ["sync"] }
 tower = "0.4"
 tower-livereload = "0.9"
 tower-http = { version = "0.5", features = ["trace", "fs"] }
-tower-sessions = { version = "0.7", features = ["redis-store"] }
+tower-sessions = { version = "0.12", features = ["signed"] }
+tower-sessions-redis-store = "0.12"
 tracing = { version = "0.1", features = ["valuable", "attributes"] }
 tracing-appender = "0.2"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 uuid = { version = "1.4", features = ["serde"] }
 url = "2.4"
-validator = { version = "0.16", features = ["derive"] }
+validator = { version = "0.18", features = ["derive"] }
 
 [profile.dev.package.sqlx-macros]
 opt-level = 3
