--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,7 @@ bytes = "1.4"
 # TODO: replace chrono with time
 chrono = { version = "0.4", features = ["serde"] }
 clap = { version = "4.4", features = ["derive", "env"] }
+console-subscriber = "0.2"
 dotenvy = "0.15"
 feed-rs = "1.3"
 futures = "0.3"
